Mon Jul 28 00:52:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	* gaim.pro:
	  - Moved a utility function that worked its way into 3 different
	    classes due to laziness into a new utility class.

Mon Jul 28 00:13:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountEditor.cpp:
	* src/QGaimAccountEditor.h:
	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* gaim.pro:
	  - Added the very beginnings of the Add/Edit account dialog.

Sun Jul 27 23:14:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaim.h:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvButton.h:
	* src/QGaimConvWindow.cpp:
	* src/main.cpp:
	  - Clicking the conversations button (as opposed to holding it down)
	    now raises the last active conversation window.

Sun Jul 27 17:13:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Removed the delay on the pop-up menu.

Sun Jul 27 17:09:38 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Moved the warn, block, add/remove, and get info buttons into
	    the User menu.

Sun Jul 27 16:41:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The text view now scrolls to the bottom when a new IM comes in
	    or is sent.

Sun Jul 27 16:26:41 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The text entry field clears after sending an IM now. Or at
	    least it should. I didn't test it, but hey, I'm perfect, right?

Sun Jul 27 16:24:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Sending messages over IMs and chats now actually works.
